fix table header alignment on open-orders ...

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -126,7 +126,7 @@ div#CenterContent {
     > thead > tr > th {
         font-size: 14px;
         padding: 5px 5px;
-        text-align: right;
+        text-align: left !important;
     }
 
     > tbody > tr > td {
